--- a/README.Rmd
+++ b/README.Rmd
@@ -45,6 +45,6 @@ The functions `moran.test_st` and `localmoran_st` are the spatio-temporal equiva
 library(stmoran)
 ```
 
-Please refer to `stmoran.html` in the `./vignettes/` directory for an example on how to use `stmoran`
+Please refer to `stmoran.Rmd` in the `./vignettes/` directory for an example on how to use `stmoran`
 
 ## References
